# news_analysis

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  app.py  main.py  news.py  news_analysis_chain.py
flutter_app/: .flutter-plugins  .flutter-plugins-dependencies  firebase.json  pubspec.yaml
flutter_app/.dart_tool/: package_config.json  package_config_subset
flutter_app/.dart_tool/extension_discovery/: vs_code.json
flutter_app/ios/: Podfile
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/app/: app.dart
flutter_app/lib/app/blocs/auth/: auth_bloc.dart  auth_event.dart  auth_state.dart
flutter_app/lib/app/blocs/news/: news_bloc.dart  news_event.dart  news_state.dart
flutter_app/lib/app/blocs/subscription/: subscription_bloc.dart  subscription_event.dart  subscription_state.dart
flutter_app/lib/app/blocs/theme/: theme_bloc.dart  theme_event.dart  theme_state.dart
flutter_app/lib/app/routes/: app_router.dart
flutter_app/lib/app/screens/: error_screen.dart  onboarding_screen.dart  splash_screen.dart
flutter_app/lib/app/theme/: app_theme.dart
flutter_app/lib/core/config/: app_config.dart
flutter_app/lib/core/services/: analytics_service.dart  api_service.dart  auth_service.dart  cache_service.dart  notification_service.dart  service_locator.dart
flutter_app/lib/core/utils/: app_logger.dart
langchain/: .env.example  .gitignore  api.py  firebase_store.py  main.py  news.py  news_analysis_chain.py  news_sources.py  pyproject.toml  requirements.txt  vector_db.py
(+6 files in other folders)
